Fixed #287 Services images are stretching

--- a/style.css
+++ b/style.css
@@ -2666,7 +2666,7 @@ div.wpcf7-mail-sent-ng {
 	max-width: 100%;
 }
 
-.parallax_one_grid img {
+.woocommerce .type-product img {
 	width: 100%;
 }
 
